# crane

./: .gitignore  CITATION.cff  CLAUDE.md  MODULES_DESIGN_SUMMARY.md  Makefile  README.md  dune  dune-project  index.html  list_self_deep_copy.cpp  list_self_deep_copy.h  loopify_method.cpp  loopify_method.h  loopify_numbers.cpp  loopify_numbers.h  optional_self_deep_copy.h  pair_self_deep_copy.h  rocq-crane.opam  run_single_test.sh  run_tests.sh
src/: benchmark.ml  benchmark.mli  common.ml  common.mli  cpp.ml  cpp.mli  cpp_ind.ml  cpp_names.ml  cpp_print.ml  cpp_state.ml  doc_comments.ml  dune  escape.ml  escape.mli  extract_env.ml  extract_env.mli  extraction.ml  extraction.mli  g_extraction.mlg  g_extraction.mli  gen_decls.ml  gen_decls.mli  go.ml  go_print.ml  loopify.ml  loopify.mli  method_registry.ml  method_registry.mli  minicpp.ml  minicpp.mli  miniml.ml  miniml.mli  ml_type_util.ml  mlutil.ml  mlutil.mli  modutil.ml  modutil.mli  name_resolution.ml  name_resolution.mli  structure_analysis.ml  (+9 more)
tests/: dune
tests/basics/: dune
tests/basics/ack/: Ack.v  ack.cpp  ack.d.cpp  ack.d.ml  ack.h  ack.t.cpp
tests/basics/add_one/: AddOne.v  add_one.cpp  add_one.h  add_one.t.cpp
tests/basics/args/: Args.v
tests/basics/binom/: Binom.v  binom.cpp  binom.h
tests/basics/binomial_heap/: BinomialHeap.v  binomial_heap.cpp  binomial_heap.h  binomial_heap.t.cpp
tests/basics/bool_ops/: BoolOps.v  bool_ops.cpp  bool_ops.h
tests/basics/closures_in_data/: ClosuresInData.v  closures_in_data.cpp  closures_in_data.h
tests/basics/colist/: Colist.v  colist.cpp  colist.h  colist.t.cpp
tests/basics/comparison/: Comparison.v  comparison.cpp  comparison.h  comparison.t.cpp
tests/basics/cotree/: cotree.cpp  cotree.h  cotree.t.cpp
tests/basics/currying/: Currying.v  currying.cpp  currying.h
tests/basics/doc_comments/: DocComments.v  doc_comments.cpp  doc_comments.h  doc_comments.t.cpp
tests/basics/eq_ord_show/: EqOrdShow.v  eq_ord_show.cpp  eq_ord_show.h  eq_ord_show.t.cpp
tests/basics/eqordshow/: EqOrdShow.v  eqordshow.cpp  eqordshow.h  eqordshow.t.cpp  simpletype.h
tests/basics/eval_expr/: EvalExpr.v  eval_expr.cpp  eval_expr.h  eval_expr.t.cpp
tests/basics/graph/: Graph.v  graph.cpp  graph.h  graph.t.cpp
tests/basics/higher_order/: HigherOrder.v  higher_order.cpp  higher_order.h  higher_order.t.cpp
tests/basics/ind_param/: IndParam.v  ind_param.cpp  ind_param.h  ind_param.t.cpp
tests/basics/int63_arith/: Int63Arith.v  int63_arith.cpp  int63_arith.h  int63_arith.t.cpp
tests/basics/isort/: Sort.v  isort.cpp  isort.h  isort.t.cpp
tests/basics/lambda/: Lambda.v  lambda.cpp  lambda.h  lambda.t.cpp
tests/basics/levenshtein/: Levenshtein.v  levenshtein.cpp  levenshtein.h  levenshtein.t.cpp
tests/basics/list/: List.v  list.cpp  list.h
tests/basics/map/: Map.v  map.cpp  map.h  map.t.cpp
tests/basics/module/: Module.v  module.cpp  module.d.cpp  module.d.ml  module.h  module.t.cpp
tests/basics/msort/: Sort.v  msort.cpp  msort.h  msort.t.cpp
tests/basics/multi_ind_functor/: MultiIndFunctor.v  multi_ind_functor.cpp  multi_ind_functor.h  multi_ind_functor.t.cpp
tests/basics/mutual_functor/: MutualFunctor.v  mutual_functor.cpp  mutual_functor.h  mutual_functor.t.cpp
tests/basics/mutual_mod/: MutualMod.v  mutual_mod.cpp  mutual_mod.d.cpp  mutual_mod.d.ml  mutual_mod.h  mutual_mod.t.cpp
tests/basics/mutual_recursion/: MutualRecursion.v  mutual_recursion.cpp  mutual_recursion.h
tests/basics/n_gmp/: NGMPTest.v  n_gmp.cpp  n_gmp.h  n_gmp.t.cpp
tests/basics/n_int/: NIntTest.v  n_int.cpp  n_int.h  n_int.t.cpp
tests/basics/nat/: Nat.v  nat.cpp  nat.cpp.golden  nat.h  nat.h.golden  nat.t.cpp
tests/basics/nat_bde/: Nat.v  nat_bde.cpp  nat_bde.h  nat_bde.t.cpp
tests/basics/nat_gmp/: NatGMPTest.v  nat_gmp.cpp  nat_gmp.h  nat_gmp.t.cpp
tests/basics/nested_mod/: NestedMod.v  nested_mod.cpp  nested_mod.h  nested_mod.t.cpp
tests/basics/nested_tree/: NestedTree.v  nested_tree.cpp  nested_tree.h
tests/basics/option/: Option.v  option.cpp  option.h
tests/basics/prim_array/: prim_array.cpp  prim_array.h
tests/basics/prim_float/: prim_float.cpp  prim_float.h  prim_float.t.cpp
tests/basics/psort/: Sort.v  psort.cpp  psort.h  psort.t.cpp
tests/basics/pstring/: PString.v  pstring.cpp  pstring.h  pstring.t.cpp
tests/basics/qsort/: Sort.v  qsort.cpp  qsort.h  qsort.t.cpp
tests/basics/rapply/: Rapply.v  rapply.cpp  rapply.h  rapply.t.cpp
tests/basics/record_match/: RecordMatch.v  record_match.cpp  record_match.h  record_match.t.cpp
tests/basics/regexp/: Regexp.v  regexp.cpp  regexp.h  regexp.t.cpp
tests/basics/rev/: Rev.v  rev.cpp  rev.h  rev.t.cpp  rev_wip.cpp  rev_wip.h
tests/basics/rmatch/: Rmatch.v  rmatch.cpp  rmatch.h
tests/basics/sections/: Sections.v  sections.cpp  sections.h  sections.t.cpp
tests/basics/sigma_types/: SigmaTypes.v  sigma_types.cpp  sigma_types.h  sigma_types.t.cpp
tests/basics/sort/: Sort.v  sort.cpp  sort.h  sort.t.cpp
tests/basics/spreadsheet/: Spreadsheet.v  spreadsheet.cpp  spreadsheet.t.cpp
tests/basics/stream/: stream.cpp  stream.h  stream.t.cpp
tests/basics/string_get_bounds/: StringGetBounds.v  string_get_bounds.cpp  string_get_bounds.h  string_get_bounds.t.cpp
tests/basics/string_match/: StringMatch.v  string_match.cpp  string_match.h  string_match.t.cpp
tests/basics/sum/: Sum.v  sum.cpp  sum.h  sum.t.cpp
tests/basics/tail_rec_map/: TailRecMap.v  tail_rec_map.cpp  tail_rec_map.h  tail_rec_map.t.cpp
tests/basics/tail_rec_rev/: TailRecRev.v  tail_rec_rev.cpp  tail_rec_rev.h  tail_rec_rev.t.cpp
tests/basics/tail_rec_zip/: TailRecZip.v  tail_rec_zip.cpp  tail_rec_zip.h  tail_rec_zip.t.cpp
tests/basics/tokenizer/: Tokenizer.v  tokenizer.cpp  tokenizer.d.cpp  tokenizer.h
tests/basics/top/: Top.v  top.cpp  top.h
tests/basics/top_bde/: Top.v  top_bde.cpp  top_bde.h  top_bde.t.cpp
tests/basics/topological_sort/: TopologicalSort.v  topological_sort.cpp  topological_sort.h  topological_sort.t.cpp
tests/go/: GoBasics.v
tests/monadic/: dune
tests/regression/: dune
tests/wip/: dune
(+4397 files in other folders)
