(library
 (name crane_plugin)                ; This is the name you will use in
                                    ; Rocq's `Declare ML Module`, and
                                    ; the name of the main OCaml
                                    ; module of your plugin.

 (public_name rocq-crane.plugin)    ; This makes the plugin
                                    ; installable; recommended, must
                                    ; match opam package name.
 (synopsis "Rocq's extraction plugin") ; Synopsis, used in META generation.

 (flags :standard -rectypes -w -9-27+60-32-33 -warn-error -3-9-32-33-50) 

 (libraries
   rocq-runtime.lib
   rocq-runtime.kernel
   rocq-runtime.library
   rocq-runtime.vernac))

(coq.pp (modules g_extraction))
