(include_subdirs qualified)

(coq.theory
 (name CraneTests)
 (synopsis "Tests for the rocq-crane plugin")
 (modules :standard) ; automatically includes all .v files in this directory
 (theories
   Stdlib
   Crane)
 (flags (:standard -output-directory ../../tests)))

(rule
 (alias runtest)
 (deps (glob_files *.v) (alias_rec all))
 (action (progn)))
