(include_subdirs qualified)

(env (_ (env-vars (INSIDE_DUNE "1"))))

(coq.theory
 (name CraneTestsBasics)
 (synopsis "Tests for the rocq-crane plugin")
 (modules :standard)
 (theories Stdlib Crane)
 (flags (:standard -output-directory %{project_root}/tests/basics)))

; Test rules - compile C++ and run tests

(subdir ack
 (rule
  (targets ack.t.exe)
  (deps Ack.vo ack.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} ack.t.exe ack.cpp ack.t.cpp)))
 (rule
  (alias runtest)
  (deps ack.t.exe)
  (action (run ./ack.t.exe))))

(subdir add_one
 (rule
  (targets add_one.t.exe)
  (deps AddOne.vo add_one.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} add_one.t.exe add_one.cpp add_one.t.cpp)))
 (rule
  (alias runtest)
  (deps add_one.t.exe)
  (action (run ./add_one.t.exe))))

(subdir args
 (rule
  (targets args.t.exe)
  (deps Args.vo args.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh args.t.exe args.cpp args.t.cpp)))
 (rule
  (alias runtest)
  (deps args.t.exe)
  (action (run ./args.t.exe))))

(subdir binom
 (rule
  (targets binom.t.exe)
  (deps Binom.vo binom.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} binom.t.exe binom.cpp binom.t.cpp)))
 (rule
  (alias runtest)
  (deps binom.t.exe)
  (action (run ./binom.t.exe))))

(subdir eqordshow
 (rule
  (targets eqordshow.t.exe)
  (deps EqOrdShow.vo eqordshow.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} eqordshow.t.exe eqordshow.cpp eqordshow.t.cpp)))
 (rule
  (alias runtest)
  (deps eqordshow.t.exe)
  (action (run ./eqordshow.t.exe))))

(subdir list
 (rule
  (targets list.t.exe)
  (deps List.vo list.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} list.t.exe list.cpp list.t.cpp)))
 (rule
  (alias runtest)
  (deps list.t.exe)
  (action (run ./list.t.exe))))

(subdir map
 (rule
  (targets map.t.exe)
  (deps Map.vo map.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} map.t.exe map.cpp map.t.cpp)))
 (rule
  (alias runtest)
  (deps map.t.exe)
  (action (run ./map.t.exe))))

(subdir module
 (rule
  (targets module.t.exe)
  (deps Module.vo module.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} module.t.exe module.cpp module.t.cpp)))
 (rule
  (alias runtest)
  (deps module.t.exe)
  (action (run ./module.t.exe))))

(subdir multi_ind_functor
 (rule
  (targets multi_ind_functor.t.exe)
  (deps MultiIndFunctor.vo multi_ind_functor.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} multi_ind_functor.t.exe multi_ind_functor.cpp multi_ind_functor.t.cpp)))
 (rule
  (alias runtest)
  (deps multi_ind_functor.t.exe)
  (action (run ./multi_ind_functor.t.exe))))

(subdir mutual_functor
 (rule
  (targets mutual_functor.t.exe)
  (deps MutualFunctor.vo mutual_functor.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} mutual_functor.t.exe mutual_functor.cpp mutual_functor.t.cpp)))
 (rule
  (alias runtest)
  (deps mutual_functor.t.exe)
  (action (run ./mutual_functor.t.exe))))

(subdir mutual_mod
 (rule
  (targets mutual_mod.t.exe)
  (deps MutualMod.vo mutual_mod.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} mutual_mod.t.exe mutual_mod.cpp mutual_mod.t.cpp)))
 (rule
  (alias runtest)
  (deps mutual_mod.t.exe)
  (action (run ./mutual_mod.t.exe))))

(subdir nat
 (rule
  (targets nat.t.exe)
  (deps Nat.vo nat.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} nat.t.exe nat.cpp nat.t.cpp)))
 (rule
  (alias runtest)
  (deps nat.t.exe)
  (action (run ./nat.t.exe))))

(subdir nat_bde
 (rule
  (targets nat_bde.t.exe)
  (deps Nat.vo nat_bde.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-bde.sh %{project_root} nat_bde.t.exe nat_bde.cpp nat_bde.t.cpp)))
 (rule
  (alias runtest)
  (deps nat_bde.t.exe)
  (action (run ./nat_bde.t.exe))))

(subdir rapply
 (rule
  (targets rapply.t.exe)
  (deps Rapply.vo rapply.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} rapply.t.exe rapply.cpp rapply.t.cpp)))
 (rule
  (alias runtest)
  (deps rapply.t.exe)
  (action (run ./rapply.t.exe))))

(subdir rmatch
 (rule
  (targets rmatch.t.exe)
  (deps Rmatch.vo rmatch.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} rmatch.t.exe rmatch.cpp rmatch.t.cpp)))
 (rule
  (alias runtest)
  (deps rmatch.t.exe)
  (action (run ./rmatch.t.exe))))

(subdir tokenizer
 (rule
  (targets tokenizer.t.exe)
  (deps Tokenizer.vo tokenizer.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} tokenizer.t.exe tokenizer.cpp tokenizer.t.cpp)))
 (rule
  (alias runtest)
  (deps tokenizer.t.exe)
  (action (run ./tokenizer.t.exe))))

(subdir top
 (rule
  (targets top.t.exe)
  (deps Top.vo top.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} top.t.exe top.cpp top.t.cpp)))
 (rule
  (alias runtest)
  (deps top.t.exe)
  (action (run ./top.t.exe))))

(subdir top_bde
 (rule
  (targets top_bde.t.exe)
  (deps Top.vo top_bde.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-bde.sh %{project_root} top_bde.t.exe top_bde.cpp top_bde.t.cpp)))
 (rule
  (alias runtest)
  (deps top_bde.t.exe)
  (action (run ./top_bde.t.exe))))

(subdir tree
 (rule
  (targets tree.t.exe)
  (deps Tree.vo tree.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} tree.t.exe tree.cpp tree.t.cpp)))
 (rule
  (alias runtest)
  (deps tree.t.exe)
  (action (run ./tree.t.exe))))


(subdir rev
 (rule
  (targets rev.t.exe)
  (deps Rev.vo rev.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} rev.t.exe rev.cpp rev.t.cpp)))
 (rule
  (alias runtest)
  (deps rev.t.exe)
  (action (run ./rev.t.exe))))

(subdir zip
 (rule
  (targets zip.t.exe)
  (deps Zip.vo zip.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} zip.t.exe zip.cpp zip.t.cpp)))
 (rule
  (alias runtest)
  (deps zip.t.exe)
  (action (run ./zip.t.exe))))
