(include_subdirs qualified)

(env (_ (env-vars (INSIDE_DUNE "1"))))

(coq.theory
 (name CraneTestsMonadic)
 (synopsis "Tests for the rocq-crane plugin")
 (modules :standard)
 (theories Stdlib Crane)
 (flags (:standard -output-directory %{project_root}/tests/monadic)))

; Test rules - compile C++ and run tests

(subdir free_monad
 (rule
  (targets free_monad.t.exe)
  (deps FreeMonad.vo free_monad.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} free_monad.t.exe free_monad.cpp free_monad.t.cpp)))
 (rule
  (alias runtest)
  (deps free_monad.t.exe)
  (action (run ./free_monad.t.exe))))

(subdir hash
 (rule
  (targets hash.t.exe)
  (deps HashTable.vo hash.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} hash.t.exe hash.cpp hash.t.cpp)))
 (rule
  (alias runtest)
  (deps hash.t.exe)
  (action (run ./hash.t.exe))))

(subdir hash_bde
 (rule
  (targets hash_bde.t.exe)
  (deps HashTable.vo hash_bde.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-bde.sh %{project_root} hash_bde.t.exe hash_bde.cpp hash_bde.t.cpp)))
 (rule
  (alias runtest)
  (deps hash_bde.t.exe)
  (action (run ./hash_bde.t.exe))))

(subdir io
 (rule
  (targets io.t.exe)
  (deps IOtest.vo io.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} io.t.exe io.cpp io.t.cpp)))
 (rule
  (alias runtest)
  (deps io.t.exe)
  (action (run ./io.t.exe))))

(subdir par
 (rule
  (targets par.t.exe)
  (deps ParTest.vo par.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} par.t.exe par.cpp par.t.cpp)))
 (rule
  (alias runtest)
  (deps par.t.exe)
  (action (run ./par.t.exe))))

(subdir stm
 (rule
  (targets stm.t.exe)
  (deps STMtest.vo stm.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} stm.t.exe stm.cpp stm.t.cpp)))
 (rule
  (alias runtest)
  (deps stm.t.exe)
  (action (run ./stm.t.exe))))

(subdir thread
 (rule
  (targets thread.t.exe)
  (deps Threadtest.vo thread.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} thread.t.exe thread.cpp thread.t.cpp)))
 (rule
  (alias runtest)
  (deps thread.t.exe)
  (action (run ./thread.t.exe))))

(subdir vector
 (rule
  (targets vector.t.exe)
  (deps VecTest.vo vector.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} vector.t.exe vector.cpp vector.t.cpp)))
 (rule
  (alias runtest)
  (deps vector.t.exe)
  (action (run ./vector.t.exe))))

(subdir bind_return
 (rule
  (targets bind_return.t.exe)
  (deps BindReturn.vo bind_return.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} bind_return.t.exe bind_return.cpp bind_return.t.cpp)))
 (rule
  (alias runtest)
  (deps bind_return.t.exe)
  (action (run ./bind_return.t.exe))))


(subdir skiplist
 (rule
  (targets skiplist.t.exe)
  (deps SkipList.vo skiplist.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} skiplist.t.exe skiplist.cpp skiplist.t.cpp)))
 (rule
  (alias runtest)
  (deps skiplist.t.exe)
  (action (run ./skiplist.t.exe))))
